--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "nrf-connect.applications": [
         "${workspaceFolder}\\my_first_blinky"
-    ]
+    ],
+    "cmake.sourceDirectory": "C:/ncs/Zephyr_project/my_first_blinky"
 }
